[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rendergit-log"
version = "0.4.0"
description = "Render a GitHub repo's commit history to a single static HTML page."
readme = "README.md"
license = "0BSD"
authors = [
    {name = "Andrej Karpathy"},
]
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.19.2",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
rendergit-log = "rendergit_commits:main"

[project.urls]
Homepage = "https://github.com/karpathy/rendergit"
Repository = "https://github.com/karpathy/rendergit"
